--- a/paysystem-core/pom.xml
+++ b/paysystem-core/pom.xml
@@ -73,6 +73,23 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope> <!-- 仅编译依赖该jar， 运行时存在 -->
+        </dependency>
+        <!-- 添加 spring-webmvc 基础依赖  -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <scope>provided</scope> <!-- 仅编译依赖该jar， 运行时存在 -->
+        </dependency>
+        <!-- commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <resources>
