--- a/conf/manager/application.yml
+++ b/conf/manager/application.yml
@@ -36,6 +36,14 @@ spring:
       # 配置监控统计拦截的filters，去掉后监控界面sql无法统计 通过connectProperties属性来打开mergeSql功能；慢SQL记录
       filters: stat,wall
       connection-properties: druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
+  cache:
+    type: redis
+  redis:
+    host: 123.60.15.140
+    port: 6379
+    database: 1    #1库：运营平台  #2库：商户系统 #3库：支付网关
+    timeout: 1000
+    password:
 
 
 #系统业务参数
