--- a/conf/manager/application.yml
+++ b/conf/manager/application.yml
@@ -10,13 +10,13 @@
 #
 #################################
 server:
-  port: 9217
+  port: 8217
 spring:
   datasource:
     # yml填写url连接串， 无需将&符号进行转义
     url: jdbc:mysql://123.60.15.140:3306/paysystem?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: jeepaydb123456
+    password: 123456
     druid:
       # 连接池配置项
       initial-size: 5 #初始化时建立物理连接的个数
@@ -44,6 +44,14 @@ spring:
     database: 1    #1库：运营平台  #2库：商户系统 #3库：支付网关
     timeout: 1000
     password:
+
+  #rabbitmq配置  ( 注意： rabbitmq配置项需在spring的下级 )
+  rabbitmq:
+    addresses: 123.60.15.140:5672
+    username: admin
+    password: admin
+    dynamic: true
+    virtual-host: jeepay
 
 
 #系统业务参数
